# TraceArena

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  GOVERNANCE.md  GOVERNANCE.zh-CN.md  LANGUAGES.md  LANGUAGES.zh-CN.md  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASE_CANDIDATE_MANIFEST.json  SECURITY.md  SECURITY.zh-CN.md  THIRD_PARTY_LICENSES.md  candidate-audit.json  docker-compose.yml  history-secret-scan.json  osv-scanner.toml  pyproject.toml  sbom.cdx.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-evaluation-pilot.yml  benchmark-proposal.yml  bug.yml  feature.yml  first-run-feedback.yml  scenario-pack.yml  world-request.yml
.github/workflows/: ci.yml  deploy-huggingface.yml  pages.yml  scorecard.yml
backend/: .env.example  framework.example.yaml  framework.public.yaml  mcp_servers.example.yaml  requirements-grid2op.txt  requirements.txt
backend/app/: __init__.py  config.py  demo_server.py  engine_manager.py  main.py  public_demo_server.py
backend/scripts/: china_market_research_mcp_server.py  create_user.py  e2e_agent_os_live.py  market_replay.py  (+9 more)
docs/: FOUNDER_PROFILE.md  PRODUCT_POSITIONING.md  WORLD_ADAPTER_SDK.md  agent-evaluation-pilot.md  commercial-support.md  commercial-support.zh-CN.md  deploy-huggingface-space.md  quickstart.md  quickstart.zh-CN.md  scenario-pack-development-guide.zh-CN.md  scenario-pack-guide.md  scenario-pack-guide.zh-CN.md  私有部署与首次登录手册.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
papers/: README.md  ai-world-paper-en.md  ai-world-paper-zh-CN.md  submission-notes.md
product-hunt/: AI_WORLD_OS_LAUNCH.md  DISTRIBUTION_PLAYBOOK.md  GITHUB_DISCUSSION_POST.md  generate_ai_world_assets.py  index.html  styles.css
scripts/: install.ps1  install.sh  replay-demo.ps1  replay-demo.sh  start.ps1  start.sh
(+378 files in other folders)
