[project]
name = "tracearena"
version = "0.1.3"
description = "The open-source runtime for auditable multi-agent worlds"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "张诺亚", email = "tonyhyworld@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "httpx>=0.27",
    "socksio>=1.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "mcp>=1.27,<2; python_version >= '3.10'",
]
[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
