[project]
name = "tracearena"
version = "0.1.11"
description = "The open-source runtime for auditable multi-agent worlds"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "张诺亚", email = "tonyhyworld@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.2.2",
    "openai>=1.40",
    "httpx>=0.27",
    "socksio>=1.0",
    "PyYAML>=6.0",
    "pydantic>=2.4.0",
    "PyJWT>=2.13.0",
    "bcrypt>=4.1",
    "cryptography>=48.0.1",
    "python-multipart>=0.0.31",
    "mcp>=1.28.1,<2; python_version >= '3.10'",
]
[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.21"]
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
